--- a/langs/ca-ES.json
+++ b/langs/ca-ES.json
@@ -193,6 +193,8 @@
   "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "Desactiva el deixant per defecte del jugador darrere del deixant del Wave",
   "COSMETIC/HACK_PLAYER_ON_TOP": "Jugador a Dalt",
   "COSMETIC/HACK_PLAYER_ON_TOP/TIP": "Força que el jugador (i el deixant del wave) apareguin per sobre de tots els objectes",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP": "",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP/TIP": "",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS": "Mostrar Intents Totals",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS/TIP": "Mostra el recompte d'intents totals en el nivell en lloc del recompte d'intents de la sessió",
   "COSMETIC/HACK_SOLID_WAVE_TRAIL": "Deixant del Wave Sòlid",
@@ -583,6 +585,8 @@
   "UTILITY": "Utilitat",
   "UTILITY/CLICKS/P1": "Clic P1",
   "UTILITY/CLICKS/P2": "Clic P2",
+  "UTILITY/DEV_TOOLS": "",
+  "UTILITY/DEV_TOOLS/TIP": "",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Esquerra",
   "UTILITY/DIRECTIONAL/P1_RIGHT": "Dreta",
   "UTILITY/DIRECTIONAL/P2_LEFT": "Esquerra",
