--- a/langs/de-DE.json
+++ b/langs/de-DE.json
@@ -193,6 +193,8 @@
   "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "Deaktiviert den normalen Spieler-Trail hinter dem Wave-Trail",
   "COSMETIC/HACK_PLAYER_ON_TOP": "",
   "COSMETIC/HACK_PLAYER_ON_TOP/TIP": "",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP": "",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP/TIP": "",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS": "",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS/TIP": "",
   "COSMETIC/HACK_SOLID_WAVE_TRAIL": "Fester Wave-Trail",
@@ -583,6 +585,8 @@
   "UTILITY": "Tools",
   "UTILITY/CLICKS/P1": "Spieler 1: Klick",
   "UTILITY/CLICKS/P2": "Spieler 2: Klick",
+  "UTILITY/DEV_TOOLS": "",
+  "UTILITY/DEV_TOOLS/TIP": "",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Spieler 1: Links",
   "UTILITY/DIRECTIONAL/P1_RIGHT": "Spieler 1: Rechts",
   "UTILITY/DIRECTIONAL/P2_LEFT": "Spieler 2: Links",
