--- a/langs/en-GB.json
+++ b/langs/en-GB.json
@@ -193,6 +193,8 @@
   "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "Disables default player trail behind the wave trail",
   "COSMETIC/HACK_PLAYER_ON_TOP": "Player on Top",
   "COSMETIC/HACK_PLAYER_ON_TOP/TIP": "Forces the player (and wave trail) to appear above all objects",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP": "Player 1 on Top",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP/TIP": "Forces player 1 to be above player 2",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS": "Show Total Attempts",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS/TIP": "Shows the total attempt count in-level instead of the session attempt count",
   "COSMETIC/HACK_SOLID_WAVE_TRAIL": "Solid Wave Trail",
@@ -583,6 +585,8 @@
   "UTILITY": "Utility",
   "UTILITY/CLICKS/P1": "P1 Click",
   "UTILITY/CLICKS/P2": "P2 Click",
+  "UTILITY/DEV_TOOLS": "Open DevTools",
+  "UTILITY/DEV_TOOLS/TIP": "Opens Geode DevTools, requires the mod to be installed",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Left",
   "UTILITY/DIRECTIONAL/P1_RIGHT": "Right",
   "UTILITY/DIRECTIONAL/P2_LEFT": "Left",
