--- a/langs/es-CO.json
+++ b/langs/es-CO.json
@@ -193,6 +193,8 @@
   "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "Desactiva la estela de jugador por defecto detrás de la estela del Wave",
   "COSMETIC/HACK_PLAYER_ON_TOP": "Jugador Arriba",
   "COSMETIC/HACK_PLAYER_ON_TOP/TIP": "Fuerza al jugador (y la estela del Wave) a aparecer encima de todos los objetos",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP": "",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP/TIP": "",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS": "Mostrar Intentos Totales",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS/TIP": "Muestra la cantidad total de intentos en el nivel en vez de los intentos de la sesión",
   "COSMETIC/HACK_SOLID_WAVE_TRAIL": "Estela del Wave Sólida",
@@ -583,6 +585,8 @@
   "UTILITY": "Utilidad",
   "UTILITY/CLICKS/P1": "Click P1",
   "UTILITY/CLICKS/P2": "Click P2",
+  "UTILITY/DEV_TOOLS": "",
+  "UTILITY/DEV_TOOLS/TIP": "",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Izquierda",
   "UTILITY/DIRECTIONAL/P1_RIGHT": "Derecha",
   "UTILITY/DIRECTIONAL/P2_LEFT": "Izquierda",
