--- a/langs/es-ES.json
+++ b/langs/es-ES.json
@@ -193,6 +193,8 @@
   "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "Desactiva la estela estándar trasera de la estela del wave",
   "COSMETIC/HACK_PLAYER_ON_TOP": "Jugador por encima",
   "COSMETIC/HACK_PLAYER_ON_TOP/TIP": "Fuerza al jugador (y a la estela del wave) a aparecer por encima de todos los objetos",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP": "",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP/TIP": "",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS": "Mostrar intentos totales",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS/TIP": "Muestra los intentos totales dentro del nivel en vez de los intentos de la sesión",
   "COSMETIC/HACK_SOLID_WAVE_TRAIL": "Estela de wave sólida",
@@ -583,6 +585,8 @@
   "UTILITY": "Utilidades",
   "UTILITY/CLICKS/P1": "Tecla P1",
   "UTILITY/CLICKS/P2": "Tecla P2",
+  "UTILITY/DEV_TOOLS": "",
+  "UTILITY/DEV_TOOLS/TIP": "",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Izq",
   "UTILITY/DIRECTIONAL/P1_RIGHT": "Der",
   "UTILITY/DIRECTIONAL/P2_LEFT": "Izq",
