--- a/langs/es-MX.json
+++ b/langs/es-MX.json
@@ -193,6 +193,8 @@
   "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "Desactiva la estela estándar del jugador detrás de la estela del wave.",
   "COSMETIC/HACK_PLAYER_ON_TOP": "",
   "COSMETIC/HACK_PLAYER_ON_TOP/TIP": "",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP": "",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP/TIP": "",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS": "",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS/TIP": "",
   "COSMETIC/HACK_SOLID_WAVE_TRAIL": "Estela del Wave Sólida",
@@ -583,6 +585,8 @@
   "UTILITY": "Utilidad",
   "UTILITY/CLICKS/P1": "Click del J1",
   "UTILITY/CLICKS/P2": "Click del J2",
+  "UTILITY/DEV_TOOLS": "",
+  "UTILITY/DEV_TOOLS/TIP": "",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Izquierda",
   "UTILITY/DIRECTIONAL/P1_RIGHT": "Derecha",
   "UTILITY/DIRECTIONAL/P2_LEFT": "Izquierda",
