--- a/langs/eu-ES.json
+++ b/langs/eu-ES.json
@@ -193,6 +193,8 @@
   "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "Wave-aztarnaren atzeko aztarna arrunta desgaitzen du",
   "COSMETIC/HACK_PLAYER_ON_TOP": "Jokalaria Gainean",
   "COSMETIC/HACK_PLAYER_ON_TOP/TIP": "Jokalaria (eta wave-aztarna) beste objektuen gainean agertzea behartzen ditu",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP": "",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP/TIP": "",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS": "Saiakeren Guztira Erakutsi",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS/TIP": "Mailaren barruan, sesioaren saiakerak erakutsi ordez, saiakeren guztira erakusten ditu",
   "COSMETIC/HACK_SOLID_WAVE_TRAIL": "Wave-Aztarna Solidoa",
@@ -583,6 +585,8 @@
   "UTILITY": "Tresneria",
   "UTILITY/CLICKS/P1": "P1 Klik",
   "UTILITY/CLICKS/P2": "P2 Klik",
+  "UTILITY/DEV_TOOLS": "",
+  "UTILITY/DEV_TOOLS/TIP": "",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Ezkerra",
   "UTILITY/DIRECTIONAL/P1_RIGHT": "Eskuina",
   "UTILITY/DIRECTIONAL/P2_LEFT": "Ezkerra",
