--- a/langs/fr-FR.json
+++ b/langs/fr-FR.json
@@ -193,6 +193,8 @@
   "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "Désactive la traînée du personnage derrière celle de la Wave",
   "COSMETIC/HACK_PLAYER_ON_TOP": "Joueur par dessus",
   "COSMETIC/HACK_PLAYER_ON_TOP/TIP": "Force le joueur (et la traînée de la Wave) à apparaître par-dessus tous les objets",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP": "",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP/TIP": "",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS": "Afficher Total d'essais",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS/TIP": "Affiche le nombre total de tentatives du niveau au lieu du nombre de tentatives de la session actuelle",
   "COSMETIC/HACK_SOLID_WAVE_TRAIL": "Couleur de la Wave",
@@ -583,6 +585,8 @@
   "UTILITY": "Utilitaires",
   "UTILITY/CLICKS/P1": "Clic P1",
   "UTILITY/CLICKS/P2": "Clic P2",
+  "UTILITY/DEV_TOOLS": "",
+  "UTILITY/DEV_TOOLS/TIP": "",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Gauche",
   "UTILITY/DIRECTIONAL/P1_RIGHT": "Droite",
   "UTILITY/DIRECTIONAL/P2_LEFT": "Gauche",
