--- a/langs/ga-IE.json
+++ b/langs/ga-IE.json
@@ -193,6 +193,8 @@
   "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "Díchumasaítear rian réamhshocraithe an imreora ar chúl rian na dtonn",
   "COSMETIC/HACK_PLAYER_ON_TOP": "",
   "COSMETIC/HACK_PLAYER_ON_TOP/TIP": "",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP": "",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP/TIP": "",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS": "",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS/TIP": "",
   "COSMETIC/HACK_SOLID_WAVE_TRAIL": "Rian Tonn Soladach",
@@ -583,6 +585,8 @@
   "UTILITY": "Fóntas",
   "UTILITY/CLICKS/P1": "Imreoir 1 Cliceáil",
   "UTILITY/CLICKS/P2": "Imreoir 2 Cliceáil",
+  "UTILITY/DEV_TOOLS": "",
+  "UTILITY/DEV_TOOLS/TIP": "",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Clé",
   "UTILITY/DIRECTIONAL/P1_RIGHT": "Díreach",
   "UTILITY/DIRECTIONAL/P2_LEFT": "Clé",
