--- a/langs/it-IT.json
+++ b/langs/it-IT.json
@@ -193,6 +193,8 @@
   "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "Rimuove la scia predefinita dietro quella della wave",
   "COSMETIC/HACK_PLAYER_ON_TOP": "Player in Cima",
   "COSMETIC/HACK_PLAYER_ON_TOP/TIP": "Forza le icone a stare sempre sopra a qualunque oggetto",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP": "",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP/TIP": "",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS": "Mostra Attempt Totali",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS/TIP": "Mostra tutti gli attempt su un livello, anziché solo quelli di una sessione",
   "COSMETIC/HACK_SOLID_WAVE_TRAIL": "Scia Wave Solida",
@@ -583,6 +585,8 @@
   "UTILITY": "Utilità",
   "UTILITY/CLICKS/P1": "Click G1",
   "UTILITY/CLICKS/P2": "Click G2",
+  "UTILITY/DEV_TOOLS": "",
+  "UTILITY/DEV_TOOLS/TIP": "",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Sinistra",
   "UTILITY/DIRECTIONAL/P1_RIGHT": "Destra",
   "UTILITY/DIRECTIONAL/P2_LEFT": "Sinistra",
