--- a/langs/kk-KZ.json
+++ b/langs/kk-KZ.json
@@ -193,6 +193,8 @@
   "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "Вейв трейлдың артындағы әдепкі ойнатқыш трейлды өшіреді",
   "COSMETIC/HACK_PLAYER_ON_TOP": "",
   "COSMETIC/HACK_PLAYER_ON_TOP/TIP": "",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP": "",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP/TIP": "",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS": "",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS/TIP": "",
   "COSMETIC/HACK_SOLID_WAVE_TRAIL": "Қатты Вейв Трейлы",
@@ -583,6 +585,8 @@
   "UTILITY": "Утилиталар",
   "UTILITY/CLICKS/P1": "P1 басу",
   "UTILITY/CLICKS/P2": "P2 басу",
+  "UTILITY/DEV_TOOLS": "",
+  "UTILITY/DEV_TOOLS/TIP": "",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Солға",
   "UTILITY/DIRECTIONAL/P1_RIGHT": "Оңға",
   "UTILITY/DIRECTIONAL/P2_LEFT": "Солға",
