--- a/langs/ko-KR.json
+++ b/langs/ko-KR.json
@@ -193,6 +193,8 @@
   "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "웨이브 트레일 뒤의 기본 플레이어 트레일을 비활성화합니다.",
   "COSMETIC/HACK_PLAYER_ON_TOP": "상단 플레이어",
   "COSMETIC/HACK_PLAYER_ON_TOP/TIP": "플레이어(및 웨이브 트레일)가 모든 오브젝트 위에 나타나도록 합니다.",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP": "",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP/TIP": "",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS": "총 시도 횟수 표시",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS/TIP": "세션 시도 횟수 대신 레벨 내 총 시도 횟수를 표시합니다.",
   "COSMETIC/HACK_SOLID_WAVE_TRAIL": "솔리드 웨이브 트레일",
@@ -583,6 +585,8 @@
   "UTILITY": "유틸리티",
   "UTILITY/CLICKS/P1": "플레이어 1 클릭",
   "UTILITY/CLICKS/P2": "플레이어 2 클릭",
+  "UTILITY/DEV_TOOLS": "",
+  "UTILITY/DEV_TOOLS/TIP": "",
   "UTILITY/DIRECTIONAL/P1_LEFT": "좌측",
   "UTILITY/DIRECTIONAL/P1_RIGHT": "우측",
   "UTILITY/DIRECTIONAL/P2_LEFT": "좌측",
