--- a/langs/pl-PL.json
+++ b/langs/pl-PL.json
@@ -193,6 +193,8 @@
   "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "Wyłącza domyślny ślad gracza za trailem trybu wave",
   "COSMETIC/HACK_PLAYER_ON_TOP": "Gracz na Wierzchu",
   "COSMETIC/HACK_PLAYER_ON_TOP/TIP": "Wymusza wyświetlanie gracza (i trailu trybu wave) nad wszystkimi obiektami",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP": "",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP/TIP": "",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS": "Pokaż Łączne Próby",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS/TIP": "Wyświetla łączną licbę prób w poziomie zamiast liczby prób sesji",
   "COSMETIC/HACK_SOLID_WAVE_TRAIL": "Jednolity Trail Wave",
@@ -583,6 +585,8 @@
   "UTILITY": "Narzędzia",
   "UTILITY/CLICKS/P1": "Klik P1",
   "UTILITY/CLICKS/P2": "Klik P2",
+  "UTILITY/DEV_TOOLS": "",
+  "UTILITY/DEV_TOOLS/TIP": "",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Lewo",
   "UTILITY/DIRECTIONAL/P1_RIGHT": "Prawo",
   "UTILITY/DIRECTIONAL/P2_LEFT": "Lewo",
