--- a/langs/pt-BR.json
+++ b/langs/pt-BR.json
@@ -193,6 +193,8 @@
   "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "Desabilita a trilha padrão de trás do jogador da trilha da wave",
   "COSMETIC/HACK_PLAYER_ON_TOP": "Jogador na frente",
   "COSMETIC/HACK_PLAYER_ON_TOP/TIP": "Força o jogador (e trilha de wave) a aparecer na frente de todos os objetos",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP": "",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP/TIP": "",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS": "Mostrar total de tentativas",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS/TIP": "Mostra a contagem total de tentativas no level ao invés da contagem da sessão",
   "COSMETIC/HACK_SOLID_WAVE_TRAIL": "Trilha da Wave Sólida",
@@ -583,6 +585,8 @@
   "UTILITY": "Utilidade",
   "UTILITY/CLICKS/P1": "Clique do P1",
   "UTILITY/CLICKS/P2": "Clique do P2",
+  "UTILITY/DEV_TOOLS": "",
+  "UTILITY/DEV_TOOLS/TIP": "",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Esquerda",
   "UTILITY/DIRECTIONAL/P1_RIGHT": "Direita",
   "UTILITY/DIRECTIONAL/P2_LEFT": "Esquerda",
