--- a/langs/sv-SE.json
+++ b/langs/sv-SE.json
@@ -193,6 +193,8 @@
   "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "Inaktiverar det vanliga spåret bakom wave-spåret",
   "COSMETIC/HACK_PLAYER_ON_TOP": "Spelare på toppen",
   "COSMETIC/HACK_PLAYER_ON_TOP/TIP": "Tvingar spelaren (och wave-spåret) att visas över alla objekt",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP": "",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP/TIP": "",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS": "Visa totala försök",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS/TIP": "Visar det totala antalet försök på nivån istället för antalet försök i sessionen",
   "COSMETIC/HACK_SOLID_WAVE_TRAIL": "Fast wave-spår",
@@ -583,6 +585,8 @@
   "UTILITY": "",
   "UTILITY/CLICKS/P1": "",
   "UTILITY/CLICKS/P2": "",
+  "UTILITY/DEV_TOOLS": "",
+  "UTILITY/DEV_TOOLS/TIP": "",
   "UTILITY/DIRECTIONAL/P1_LEFT": "",
   "UTILITY/DIRECTIONAL/P1_RIGHT": "",
   "UTILITY/DIRECTIONAL/P2_LEFT": "",
