--- a/langs/tr-TR.json
+++ b/langs/tr-TR.json
@@ -193,6 +193,8 @@
   "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "Wave izinin arkasındaki oyuncu izini devre dışı bırakır",
   "COSMETIC/HACK_PLAYER_ON_TOP": "Oyuncu Üstte",
   "COSMETIC/HACK_PLAYER_ON_TOP/TIP": "Oyuncu ve Wave izini tüm nesnelerin üstünde gösterir",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP": "",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP/TIP": "",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS": "Toplam Denemeleri Göster",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS/TIP": "Seviyedeki toplam deneme sayısını gösterir",
   "COSMETIC/HACK_SOLID_WAVE_TRAIL": "Sade Wave İzi",
@@ -583,6 +585,8 @@
   "UTILITY": "Araçlar",
   "UTILITY/CLICKS/P1": "P1 Tıklama",
   "UTILITY/CLICKS/P2": "P2 Tıklama",
+  "UTILITY/DEV_TOOLS": "",
+  "UTILITY/DEV_TOOLS/TIP": "",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Sol",
   "UTILITY/DIRECTIONAL/P1_RIGHT": "Sağ",
   "UTILITY/DIRECTIONAL/P2_LEFT": "Sol",
