--- a/langs/uk-UA.json
+++ b/langs/uk-UA.json
@@ -193,6 +193,8 @@
   "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "Деактивує стандартний трейл вейву, при цьому залишаючи трейл у всіх інших режимах",
   "COSMETIC/HACK_PLAYER_ON_TOP": "Гравець поверх усього",
   "COSMETIC/HACK_PLAYER_ON_TOP/TIP": "Робить гравця (та трейл вейву) видимим поверх усіх об'єктів",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP": "",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP/TIP": "",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS": "Показ усіх спроб",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS/TIP": "Показує всі спроби в рівні, а не тільки спроби під час даної сесії",
   "COSMETIC/HACK_SOLID_WAVE_TRAIL": "Однотонний трейл вейву",
@@ -583,6 +585,8 @@
   "UTILITY": "Утиліти",
   "UTILITY/CLICKS/P1": "Клік гр. 1",
   "UTILITY/CLICKS/P2": "Клік гр. 2",
+  "UTILITY/DEV_TOOLS": "",
+  "UTILITY/DEV_TOOLS/TIP": "",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Вліво",
   "UTILITY/DIRECTIONAL/P1_RIGHT": "Вправо",
   "UTILITY/DIRECTIONAL/P2_LEFT": "Вліво",
