--- a/langs/vi-VN.json
+++ b/langs/vi-VN.json
@@ -193,6 +193,8 @@
   "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "Vô hiệu hóa trail gốc ở đằng sau wave",
   "COSMETIC/HACK_PLAYER_ON_TOP": "Player trên cùng",
   "COSMETIC/HACK_PLAYER_ON_TOP/TIP": "Bắt buộc player (và wave trail) ở trên cùng tất cả object",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP": "",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP/TIP": "",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS": "Hiện Tổng SỐ Attempt",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS/TIP": "Hiện tổng số attempt từ khi chơi level thay vì số attempt theo lần chơi",
   "COSMETIC/HACK_SOLID_WAVE_TRAIL": "Màu wave trail đồng nhất",
@@ -583,6 +585,8 @@
   "UTILITY": "Tiện ích",
   "UTILITY/CLICKS/P1": "P1 Click",
   "UTILITY/CLICKS/P2": "P2 Click",
+  "UTILITY/DEV_TOOLS": "",
+  "UTILITY/DEV_TOOLS/TIP": "",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Trái",
   "UTILITY/DIRECTIONAL/P1_RIGHT": "Phải",
   "UTILITY/DIRECTIONAL/P2_LEFT": "Trái",
