--- a/langs/zh-CN.json
+++ b/langs/zh-CN.json
@@ -193,6 +193,8 @@
   "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "禁用Wave尾迹下的玩家尾迹",
   "COSMETIC/HACK_PLAYER_ON_TOP": "Player on top",
   "COSMETIC/HACK_PLAYER_ON_TOP/TIP": "强制玩家和尾迹在所有Object上方",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP": "",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP/TIP": "",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS": "显示总Attempts",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS/TIP": "显示总Attempts数",
   "COSMETIC/HACK_SOLID_WAVE_TRAIL": "实心Wave尾迹",
@@ -583,6 +585,8 @@
   "UTILITY": "功能",
   "UTILITY/CLICKS/P1": "玩家1上键",
   "UTILITY/CLICKS/P2": "玩家2上键",
+  "UTILITY/DEV_TOOLS": "",
+  "UTILITY/DEV_TOOLS/TIP": "",
   "UTILITY/DIRECTIONAL/P1_LEFT": "玩家1左键",
   "UTILITY/DIRECTIONAL/P1_RIGHT": "玩家1右键",
   "UTILITY/DIRECTIONAL/P2_LEFT": "玩家2左键",
