--- a/langs/ar-SA.json
+++ b/langs/ar-SA.json
@@ -193,6 +193,8 @@
   "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "يعطل الأثر الافتراضي للاعب خلف الأثر الموجي",
   "COSMETIC/HACK_PLAYER_ON_TOP": "",
   "COSMETIC/HACK_PLAYER_ON_TOP/TIP": "",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP": "",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP/TIP": "",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS": "",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS/TIP": "",
   "COSMETIC/HACK_SOLID_WAVE_TRAIL": "أثر موجي صلب",
@@ -583,6 +585,8 @@
   "UTILITY": "أداة مساعدة",
   "UTILITY/CLICKS/P1": "نقرة P1",
   "UTILITY/CLICKS/P2": "نقرة P2",
+  "UTILITY/DEV_TOOLS": "",
+  "UTILITY/DEV_TOOLS/TIP": "",
   "UTILITY/DIRECTIONAL/P1_LEFT": "يسار",
   "UTILITY/DIRECTIONAL/P1_RIGHT": "يمين",
   "UTILITY/DIRECTIONAL/P2_LEFT": "يسار",
