--- a/langs/hu-HU.json
+++ b/langs/hu-HU.json
@@ -193,6 +193,8 @@
   "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "Kikapcsolja a wave vonala alatti kis vonalakat",
   "COSMETIC/HACK_PLAYER_ON_TOP": "A player felül lesz",
   "COSMETIC/HACK_PLAYER_ON_TOP/TIP": "A playert (és a wave vonalát) minden objektum felé rakja",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP": "",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP/TIP": "",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS": "Összes próbák mutatása",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS/TIP": "A próbáid száma az összeset fogja mutatni, nem pedig azt, amikor beléptél",
   "COSMETIC/HACK_SOLID_WAVE_TRAIL": "Szilárd Wave Vonal",
@@ -583,6 +585,8 @@
   "UTILITY": "Egyebek",
   "UTILITY/CLICKS/P1": "Első játékos klikk",
   "UTILITY/CLICKS/P2": "Második játékos klikk",
+  "UTILITY/DEV_TOOLS": "",
+  "UTILITY/DEV_TOOLS/TIP": "",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Bal",
   "UTILITY/DIRECTIONAL/P1_RIGHT": "Jobb",
   "UTILITY/DIRECTIONAL/P2_LEFT": "Bal",
