--- a/langs/nb-NO.json
+++ b/langs/nb-NO.json
@@ -193,6 +193,8 @@
   "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "Deaktiverer det vanlige spillersporet bak wave-sporet",
   "COSMETIC/HACK_PLAYER_ON_TOP": "",
   "COSMETIC/HACK_PLAYER_ON_TOP/TIP": "",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP": "",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP/TIP": "",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS": "",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS/TIP": "",
   "COSMETIC/HACK_SOLID_WAVE_TRAIL": "Solid Wave-Spor",
@@ -583,6 +585,8 @@
   "UTILITY": "Funksjon",
   "UTILITY/CLICKS/P1": "P1 Klikk",
   "UTILITY/CLICKS/P2": "P2 Klikk",
+  "UTILITY/DEV_TOOLS": "",
+  "UTILITY/DEV_TOOLS/TIP": "",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Venstre",
   "UTILITY/DIRECTIONAL/P1_RIGHT": "Høyre",
   "UTILITY/DIRECTIONAL/P2_LEFT": "Venstre",
