--- a/langs/nl-NL.json
+++ b/langs/nl-NL.json
@@ -193,6 +193,8 @@
   "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "Schakelt het standaardspelerspoor achter het Wavespoor uit",
   "COSMETIC/HACK_PLAYER_ON_TOP": "",
   "COSMETIC/HACK_PLAYER_ON_TOP/TIP": "",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP": "",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP/TIP": "",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS": "",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS/TIP": "",
   "COSMETIC/HACK_SOLID_WAVE_TRAIL": "Stevige Waveroute",
@@ -583,6 +585,8 @@
   "UTILITY": "",
   "UTILITY/CLICKS/P1": "",
   "UTILITY/CLICKS/P2": "",
+  "UTILITY/DEV_TOOLS": "",
+  "UTILITY/DEV_TOOLS/TIP": "",
   "UTILITY/DIRECTIONAL/P1_LEFT": "",
   "UTILITY/DIRECTIONAL/P1_RIGHT": "",
   "UTILITY/DIRECTIONAL/P2_LEFT": "",
