--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -193,6 +193,8 @@
   "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "Отключает обычный след игрока за следом волны",
   "COSMETIC/HACK_PLAYER_ON_TOP": "Игрок поверх",
   "COSMETIC/HACK_PLAYER_ON_TOP/TIP": "Заставляет отображать игрока (и его след) поверх всех объектов",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP": "",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP/TIP": "",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS": "Показать общие попытки",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS/TIP": "Показывает общее число попыток в уровне вместо сессионных",
   "COSMETIC/HACK_SOLID_WAVE_TRAIL": "Одноцветный след",
@@ -583,6 +585,8 @@
   "UTILITY": "Разное",
   "UTILITY/CLICKS/P1": "Прыжок, 1 игрок",
   "UTILITY/CLICKS/P2": "Прыжок, 2 игрок",
+  "UTILITY/DEV_TOOLS": "",
+  "UTILITY/DEV_TOOLS/TIP": "",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Влево",
   "UTILITY/DIRECTIONAL/P1_RIGHT": "Вправо",
   "UTILITY/DIRECTIONAL/P2_LEFT": "Влево",
