--- a/langs/zh-HK.json
+++ b/langs/zh-HK.json
@@ -193,6 +193,8 @@
   "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "禁用箭號尾跡地下的玩家尾跡",
   "COSMETIC/HACK_PLAYER_ON_TOP": "玩家在最上面",
   "COSMETIC/HACK_PLAYER_ON_TOP/TIP": "強制玩家和箭號尾跡在所有物體上方",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP": "",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP/TIP": "",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS": "",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS/TIP": "",
   "COSMETIC/HACK_SOLID_WAVE_TRAIL": "實心箭號尾跡",
@@ -583,6 +585,8 @@
   "UTILITY": "功能",
   "UTILITY/CLICKS/P1": "玩家1上鍵",
   "UTILITY/CLICKS/P2": "玩家2上鍵",
+  "UTILITY/DEV_TOOLS": "",
+  "UTILITY/DEV_TOOLS/TIP": "",
   "UTILITY/DIRECTIONAL/P1_LEFT": "玩家1左鍵",
   "UTILITY/DIRECTIONAL/P1_RIGHT": "玩家1右鍵",
   "UTILITY/DIRECTIONAL/P2_LEFT": "玩家2左鍵",
