--- a/langs/ko-KR.json
+++ b/langs/ko-KR.json
@@ -191,10 +191,10 @@
   "COSMETIC/HACK_NO_WAVE_TRAIL/TIP": "하드 웨이브 트레일을 비활성화합니다, 표준 트레일은 그대로 유지됩니다.",
   "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND": "웨이브 뒤 트레일 비활성화",
   "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "웨이브 트레일 뒤의 기본 플레이어 트레일을 비활성화합니다.",
-  "COSMETIC/HACK_PLAYER_ON_TOP": "상단 플레이어",
+  "COSMETIC/HACK_PLAYER_ON_TOP": "플레이어 상단 표시",
   "COSMETIC/HACK_PLAYER_ON_TOP/TIP": "플레이어(및 웨이브 트레일)가 모든 오브젝트 위에 나타나도록 합니다.",
-  "COSMETIC/HACK_PLAYER_1_ON_TOP": "",
-  "COSMETIC/HACK_PLAYER_1_ON_TOP/TIP": "",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP": "플레이어 1 상단 표시",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP/TIP": "플레이어 1을 플레이어 2 위에 표시합니다.",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS": "총 시도 횟수 표시",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS/TIP": "세션 시도 횟수 대신 레벨 내 총 시도 횟수를 표시합니다.",
   "COSMETIC/HACK_SOLID_WAVE_TRAIL": "솔리드 웨이브 트레일",
@@ -585,8 +585,8 @@
   "UTILITY": "유틸리티",
   "UTILITY/CLICKS/P1": "플레이어 1 클릭",
   "UTILITY/CLICKS/P2": "플레이어 2 클릭",
-  "UTILITY/DEV_TOOLS": "",
-  "UTILITY/DEV_TOOLS/TIP": "",
+  "UTILITY/DEV_TOOLS": "개발자 도구 열기",
+  "UTILITY/DEV_TOOLS/TIP": "Geode 개발자 도구를 엽니다, 모드가 설치되어 있어야 합니다.",
   "UTILITY/DIRECTIONAL/P1_LEFT": "좌측",
   "UTILITY/DIRECTIONAL/P1_RIGHT": "우측",
   "UTILITY/DIRECTIONAL/P2_LEFT": "좌측",
