--- a/langs/eu-ES.json
+++ b/langs/eu-ES.json
@@ -18,7 +18,7 @@
   "ERROR/REPLAY/FILE_NOT_FOUND": "Fitxategia aurkitu ezin da",
   "ERROR/REPLAY/NO_INPUTS": "Oraingo makroan sarrerarik ez ditu, jarraitu ezin da",
   "ERROR/STATUS/MAX_FIELDS": "Egoera-lerro guztiak beteta daude, Eremu-Formatutze atalean ikusi",
-  "ERROR/LEVEL/NO_CBF": "Geode-n Click Between Frames jaitsi itzazu!",
+  "ERROR/LEVEL/NO_CBF": "Geode-n «Click Between Frames» jaitsi itzazu!",
   "MESSAGE": "Mezua",
   "MESSAGE/OK": "Ados",
   "MESSAGE/CANCEL": "Utzi",
@@ -27,7 +27,7 @@
   "MESSAGE/HOME/CONFIRM_LOGOUT": "Mega Hack saioa itxi nahi al duzu?",
   "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "Jadanik zenituen Mega Hack v8-ko ezarpenak kargatzea nahi al dituzu? Honek orain dituzun ezarpenak berridatziko ditu",
   "MESSAGE/HOME/LOGOUT_SUCCESS": "Saioa itxita! Mega Hack erabiltzea jarraitu ahal duzu berrabiarazi arte",
-  "MESSAGE/CHEAT_SAFETY/CONFIRM_DISABLE": "",
+  "MESSAGE/CHEAT_SAFETY/CONFIRM_DISABLE": "Adierazitako tranpa guztiak itzali nahi al duzu?",
   "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "Mesedez, joku-geruzatik/editoretik irten behar duzu pantaila osoko modua aldatzeko",
   "MESSAGE/REPLAY/CONFIRM_CLEAR": "Zure makroan gorde gabeko aldaketak dituzu. Garbitzea eta berriro hastea ziur nahi al duzu?",
   "MESSAGE/REPLAY/CONFIRM_DELETE": "Hautatutako makroa ezabatzeko ziur al zaude?",
@@ -40,7 +40,7 @@
   "GM_VAR/0096": "Aldatu Wave Aztarna",
   "HOME/LANGUAGE": "Hizkuntza",
   "HOME/SEARCH/SEARCH": "Bilatu",
-  "HOME/SEARCH/AUTO_SELECT": "",
+  "HOME/SEARCH/AUTO_SELECT": "Hautatu Automatikoki",
   "HOME/RULESETS": "Arau-Multzoak",
   "HOME/RULESETS/SAFE_MODE": "Modu Segurua",
   "HOME/ANIM_SPEED": "Animazioak (ms)",
@@ -48,9 +48,9 @@
   "HOME/ANIM_SPEED/SUF": "ms",
   "HOME/CONTRIBUTE_TRANSLATIONS": "Lagundu Itzultzen",
   "HOME/DOT": "Puntu Adierazlea",
-  "HOME/DOT/TIP": "Mega Hack interfazeetan, puntu adierazle bat gehitzen du (hala nola Iconic edo Mugikorrean), zer aktibatuta dagoen argitzeko",
+  "HOME/DOT/TIP": "Mega Hack interfazeetan, puntu adierazle bat gehitzen du (hala nola «Iconic» edo Mugikorrean), zer aktibatuta dagoen argitzeko",
   "HOME/SHORTCUT/ALT": "Lasterbide Alternatiboa",
-  "HOME/SHORTCUT/ICONIC": "Ikonoen Lasterbidea",
+  "HOME/SHORTCUT/ICONIC": "«Iconic» Lasterbidea",
   "HOME/SORT_TABS": "Fitxak Txukundu",
   "HOME/SCALE": "Interfazearen Tamaina",
   "HOME/SCALE/PRE": "Interfazearen Tamaina",
@@ -70,8 +70,8 @@
   "KEYBINDS/DISABLE_IN_EDITOR/TIP": "Mega Hack-eko lasterbideak desgaitzen ditu maila editorea erabiltzean",
   "KEYBINDS/EMPTY": "Hutsik",
   "BYPASS": "Bypass",
-  "BYPASS/HACK_ANTI_KICK": "",
-  "BYPASS/HACK_ANTI_KICK/TIP": "",
+  "BYPASS/HACK_ANTI_KICK": "Kanporatzerik Ez",
+  "BYPASS/HACK_ANTI_KICK/TIP": "Zenbait mailetatik kanporatzea sahiesten zaitu",
   "BYPASS/HACK_MAIN_LEVELS": "Maila Nagusiak",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Demon maila nagusiak desblokeatzen ditu.",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Musika Desblokeatu",
@@ -98,20 +98,20 @@
   "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "Lau Dezimal",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "Ball Biraketaren Bug-a",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "2.0 bertsioaren 'Ball Barrel-Roll' errorea birsortzen du",
-  "COSMETIC/HACK_NO_CIRCLES": "",
-  "COSMETIC/HACK_NO_CIRCLES/TIP": "",
+  "COSMETIC/HACK_NO_CIRCLES": "Borobil Efekturik Ez",
+  "COSMETIC/HACK_NO_CIRCLES/TIP": "Tranpolinen, orbeen eta ateen borobil-efektua kentzen ditu",
   "COSMETIC/HACK_CLASSIC_PARTICLES": "Partikula Klasikoak",
   "COSMETIC/HACK_CLASSIC_PARTICLES/TIP": "Mini-jokalariari jarraitzen zieten partikulak berrezartzen ditu",
   "COSMETIC/HACK_CLASSIC_PULSE": "Taupada Klasikoa",
   "COSMETIC/HACK_CLASSIC_PULSE/TIP": "60Hz gaineko taupadak ahalbidetzen ditu, 2.1 eta aurretiko eran bezala",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "Wave-Aztarna Klasikoa",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "2.1 bertsioaren wave-aztarnaren birsorketa",
-  "COSMETIC/HACK_COIN_SHOWER": "",
-  "COSMETIC/HACK_COIN_SHOWER/TIP": "",
-  "COSMETIC/HACK_NO_END_SHAKE": "",
-  "COSMETIC/HACK_NO_END_SHAKE/TIP": "",
-  "COSMETIC/HACK_FROZEN_ANIMATIONS": "",
-  "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "",
+  "COSMETIC/HACK_COIN_SHOWER": "Txanpon-Dutxa",
+  "COSMETIC/HACK_COIN_SHOWER/TIP": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
+  "COSMETIC/HACK_NO_END_SHAKE": "Amaieraren Dardararik Ez",
+  "COSMETIC/HACK_NO_END_SHAKE/TIP": "Maila gainditzearen animaziotik kamera-dardara kentzen du",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS": "Animazio Izoztutak",
+  "COSMETIC/HACK_FROZEN_ANIMATIONS/TIP": "Sprite-animazioak desgaitzen ditu; hala nola, Robot eta Armiarmarenak",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Pausa-Botoia Ezkutatu",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "Jokuaren barruan kurtsorea aktibatuta badago, pausa-botoia ezkutatzen du",
   "COSMETIC/HACK_HIDE_PAUSE_MENU": "Pausa-Menua Ezkutatu",
@@ -122,18 +122,18 @@
   "COSMETIC/HACK_NO_CAMERA/TIP": "Kamera mugitzen duten trigger-ak desgaitzen ditu",
   "COSMETIC/HACK_NO_CAMERA_ZOOM": "Kamera-Zoom Ez",
   "COSMETIC/HACK_NO_CAMERA_ZOOM/TIP": "Kamerarekin zoom egiten duten trigger-ak desgaitzen ditu",
-  "COSMETIC/HACK_NO_DASH_FIRE": "",
-  "COSMETIC/HACK_NO_DASH_FIRE/TIP": "",
+  "COSMETIC/HACK_NO_DASH_FIRE": "Dash-Surik Ez",
+  "COSMETIC/HACK_NO_DASH_FIRE/TIP": "Dash-suaren efektua ezkutatzen du",
   "COSMETIC/HACK_NO_DEATH_EFFECT": "Hiltze-Efekturik Ez",
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Hiltzean, efektu bisualak desgaitzen ditu",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "'Do Not Flip'-ik Ez",
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Saiakera eta Maila Gaindituta testuak buruz-behera jartzea desgaitzen ditu",
-  "COSMETIC/HACK_NO_GHOST_TRAIL": "",
-  "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "",
+  "COSMETIC/HACK_NO_GHOST_TRAIL": "Mamu-Aztarnarik Ez",
+  "COSMETIC/HACK_NO_GHOST_TRAIL/TIP": "Jokalarietan mamu-aztarna efektua desgaitzen du",
   "COSMETIC/HACK_NO_GLOW": "Glow-rik Ez",
   "COSMETIC/HACK_NO_GLOW/TIP": "Objektu guztietan, glow efektua desgaitzen du",
-  "COSMETIC/HACK_NO_NEW_BEST_POPUP": "",
-  "COSMETIC/HACK_NO_NEW_BEST_POPUP/TIP": "",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP": "Errekor Berriaren Mezurik Ez",
+  "COSMETIC/HACK_NO_NEW_BEST_POPUP/TIP": "Errekor Berriaren mezua kentzen du, eta berragertze-denbora luzatua laburtzen du",
   "COSMETIC/HACK_NO_MIRROR": "Ispilurik Ez",
   "COSMETIC/HACK_NO_MIRROR/TIP": "Ispilu-portalaren efektua desgaitzen du",
   "COSMETIC/HACK_NO_ORB_RING": "Orbe-Eraztunik Ez",
@@ -173,16 +173,16 @@
   "COSMETIC/HACK_NO_PULSE/TIP": "Objektuen taupadak desgaitzen ditu",
   "COSMETIC/HACK_NO_RESPAWN_FLASH": "Respawn Flash-ik Ez",
   "COSMETIC/HACK_NO_RESPAWN_FLASH/TIP": "Respawn Flash- eta borobil-efektuak desgaitzen ditu",
-  "COSMETIC/HACK_NO_ROBOT_FIRE": "",
-  "COSMETIC/HACK_NO_ROBOT_FIRE/TIP": "",
+  "COSMETIC/HACK_NO_ROBOT_FIRE": "Robot Surik Ez",
+  "COSMETIC/HACK_NO_ROBOT_FIRE/TIP": "Robot joku-modutik, bultzada-suaren animazioa eta partikulak kentzen ditu",
   "COSMETIC/HACK_NO_SHADERS": "Shader-ik Ez",
   "COSMETIC/HACK_NO_SHADERS/TIP": "Mailen barruko shader-ak desgaitzen ditu",
   "COSMETIC/HACK_NO_SHAKE": "Dardararik Ez",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Shake trigger-ak desgaitzen ditu",
-  "COSMETIC/HACK_NO_SPIDER_DASH": "",
-  "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "",
-  "COSMETIC/HACK_NO_SWING_FIRE": "",
-  "COSMETIC/HACK_NO_SWING_FIRE/TIP": "",
+  "COSMETIC/HACK_NO_SPIDER_DASH": "Armiarmaren Dash-Efekturik Ez",
+  "COSMETIC/HACK_NO_SPIDER_DASH/TIP": "Teleportatzean, Armiarmaren Dash efektua kentzen du",
+  "COSMETIC/HACK_NO_SWING_FIRE": "Swing-Surik Ez",
+  "COSMETIC/HACK_NO_SWING_FIRE/TIP": "Swing joku-modutik, bultzada-su animazia eta partikulak kentzen ditu",
   "COSMETIC/HACK_NO_TRAIL": "Aztarnarik Ez",
   "COSMETIC/HACK_NO_TRAIL/TIP": "Jokalariaren aztarna desgaitzen du, beti",
   "COSMETIC/HACK_NO_WAVE_PULSE": "Wave-Taupadarik Ez",
@@ -193,8 +193,8 @@
   "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "Wave-aztarnaren atzeko aztarna arrunta desgaitzen du",
   "COSMETIC/HACK_PLAYER_ON_TOP": "Jokalaria Gainean",
   "COSMETIC/HACK_PLAYER_ON_TOP/TIP": "Jokalaria (eta wave-aztarna) beste objektuen gainean agertzea behartzen ditu",
-  "COSMETIC/HACK_PLAYER_1_ON_TOP": "",
-  "COSMETIC/HACK_PLAYER_1_ON_TOP/TIP": "",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP": "1. Jokalaria Gainean",
+  "COSMETIC/HACK_PLAYER_1_ON_TOP/TIP": "1. jokalaria 2. jokalariaren gainean egotea behartzen du",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS": "Saiakeren Guztira Erakutsi",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS/TIP": "Mailaren barruan, sesioaren saiakerak erakutsi ordez, saiakeren guztira erakusten ditu",
   "COSMETIC/HACK_SOLID_WAVE_TRAIL": "Wave-Aztarna Solidoa",
@@ -243,27 +243,27 @@
   "CREATOR/HACK_TRIGGER_VALUE_BYPASS/TIP": "Trigger-eko kontrol-mugak zeharkatzeko aukera ematen ditu",
   "CREATOR/HACK_VERIFY_HACK": "Verify Hack",
   "CREATOR/HACK_VERIFY_HACK/TIP": "Egiaztatu gabeko mailak igotzeko aukera ematen zaitu",
-  "CREATOR/MULTIPLE_EDITOR_TRAILS/HACK_MULTIPLE_EDITOR_TRAILS": "",
-  "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_ALL": "",
-  "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_LASTEST": "",
-  "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_OLDEST": "",
-  "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/TRANSPARENCY": "",
+  "CREATOR/MULTIPLE_EDITOR_TRAILS/HACK_MULTIPLE_EDITOR_TRAILS": "Hainbat Editore-Aztarnak",
+  "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_ALL": "Guztiak Garbitu",
+  "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_LASTEST": "Azkena Garbitu",
+  "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/CLEAR_OLDEST": "Zaharrena Garbitu",
+  "CREATOR/MULTIPLE_EDITOR_TRAILS/DROPDOWN/TRANSPARENCY": "Gardentasuna",
   "LEVEL": "Maila",
-  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER": "",
-  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER/TIP": "",
-  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD": "",
-  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/PRE": "",
-  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/SUF": "",
-  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE": "",
-  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/PRE": "",
-  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/SUF": "",
-  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET": "",
-  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/PRE": "",
-  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/SUF": "",
-  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE": "",
-  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/0": "",
-  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/1": "",
-  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/2": "",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER": "Auto-Klikatzailea",
+  "LEVEL/AUTO_CLICKER/HACK_AUTO_CLICKER/TIP": "Klikak tarte zehatzetan automatikoki ezartzen ditu",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD": "Mantendu (fotogramak)",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/PRE": "Mantendu",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/HOLD/SUF": " fotogramak",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE": "Askatu (fotogramak)",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/PRE": "Askatu",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/RELEASE/SUF": " fotogramak",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET": "Atzeratu (fotogramak)",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/PRE": "Atzeratu",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/OFFSET/SUF": " fotogramak",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE": "Modua",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/0": "Bi Jokalariak",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/1": "1. Jokalaria",
+  "LEVEL/AUTO_CLICKER/DROPDOWN/MODE/2": "2. Jokalaria",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT": "Gortu",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/PRE": "% ",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/SUF": "an gortu",
@@ -319,7 +319,7 @@
   "LEVEL/HACK_AUTO_START_POS": "StartPos Automatikoa",
   "LEVEL/HACK_AUTO_START_POS/TIP": "Portaletan automatikoki StartPos kokatzen ditu",
   "LEVEL/CBF/HACK_CBF": "Click Between Frames",
-  "LEVEL/CBF/HACK_CBF/TIP": "Syzzi-k sortutako Click Between Frames-eko etengailua (jadanik jaitsita egin behar da!)",
+  "LEVEL/CBF/HACK_CBF/TIP": "Syzzi-k sortutako «Click Between Frames»-en etengailua (jadanik jaitsita egin behar da!)",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "Click on Steps",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "Sarrerak 240 TPS-ko zehaztasunarekin bakarrik erregistratzea egiten ditu, jatorrizko fisikak mantenduz",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Checkpoint Mugaren Bypass",
@@ -356,10 +356,10 @@
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/DEATH_OBJ": "Hiltze-Objektua Erakutsi",
   "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT": "Layout-a Erakutsi",
   "LEVEL/SHOW_LAYOUT/HACK_SHOW_LAYOUT/TIP": "Mailetatik apainketa eta kolore guztiak kentzen ditu",
-  "LEVEL/SHOW_LAYOUT/DROPDOWN/BG/ENABLED": "",
-  "LEVEL/SHOW_LAYOUT/DROPDOWN/GROUND/ENABLED": "",
-  "LEVEL/SHOW_LAYOUT/DROPDOWN/MG/ENABLED": "",
-  "LEVEL/SHOW_LAYOUT/DROPDOWN/OBJ/ENABLED": "",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/BG/ENABLED": "Atzealdea",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/GROUND/ENABLED": "Lurzorua",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/MG/ENABLED": "Erdikaldea",
+  "LEVEL/SHOW_LAYOUT/DROPDOWN/OBJ/ENABLED": "Objektuak",
   "LEVEL/HACK_SHOW_TRIGGERS": "Trigger-ak Erakutsi",
   "LEVEL/HACK_SHOW_TRIGGERS/TIP": "Mailaren barruan trigger-ak erakusten du",
   "LEVEL/HACK_SHIPCOPTER": "Shipcopter",
@@ -440,16 +440,16 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Jokalariak saiakeran nondik igarotu zuen bidearen aztarna erakusten du, Hitbox-ak Erakutsi aukera behar du",
   "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "Bidea Erakutsi",
   "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY/TIP": "Etengabeko botoi-eusteetan eta askatzeetan, jokalariaren aurreikusitako bideak marrazten ditu",
-  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS": "",
-  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS/PRE": "",
-  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS": "",
-  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/PRE": "",
-  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/SUF": "",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS": "Iterazioak (pausuak)",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/ITERATIONS/PRE": "Iterazioak",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS": "Lodiera",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/PRE": "Lodiera",
+  "LEVEL/SHOW_TRAJECTORY/DROPDOWN/THICKNESS/SUF": "x",
   "LEVEL/SMART_STARTPOS/DROPDOWN/LEGACY_CALCULATION": "Kalkulu Klasikoa",
-  "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "",
-  "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "",
-  "LEVEL/SMART_STARTPOS/DROPDOWN/SIZE_PORTALS": "",
-  "LEVEL/SMART_STARTPOS/DROPDOWN/MIRROR_PORTALS": "",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/GAMEMODE_PORTALS": "Joku-Moduen Ateak",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/SPEED_PORTALS": "Abiadura-Ateak",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/SIZE_PORTALS": "Tamaina-Ateak",
+  "LEVEL/SMART_STARTPOS/DROPDOWN/MIRROR_PORTALS": "Ispilu-Ateak",
   "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS": "StartPos Adimenduna",
   "LEVEL/SMART_STARTPOS/HACK_SMART_STARTPOS/TIP": "StartPos bakoitzaren joku-modua, abiadura, tamaina eta muga automatikoki ezartzen ditu",
   "LEVEL/STARTPOS_SWITCHER/DROPDOWN/HIDE_INTERFACE": "Interfazea Ezkutatu",
@@ -535,20 +535,20 @@
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION": "Iraupena (s)",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/PRE": "Iraupena",
   "UNIVERSAL/TRANSITION_CUSTOMISER/DROPDOWN/DURATION/SUF": "s",
-  "CHEAT_SAFETY": "",
-  "CHEAT_SAFETY/RULESET": "",
-  "CHEAT_SAFETY/DISABLE_CHEATS": "",
+  "CHEAT_SAFETY": "Tranpa-Segurtasuna",
+  "CHEAT_SAFETY/RULESET": "Arau-Multzoa",
+  "CHEAT_SAFETY/DISABLE_CHEATS": "Tranpak Itzali",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE": "Auto-Modu Segurua",
   "CHEAT_SAFETY/HACK_AUTO_SAFE_MODE/TIP": "Saiakera batean tranpak erabili badira, modu Segurua pizten du",
   "CHEAT_SAFETY/HACK_SAFE_MODE": "Modu Segurua",
   "CHEAT_SAFETY/HACK_SAFE_MODE/TIP": "Mailetan aurrerapenak, gainditzeak eta egiaztatzeak desgaitzen ditu",
   "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP": "Modu Seguruaren Abisua",
   "CHEAT_SAFETY/HACK_SAFE_MODE_POPUP/TIP": "Maila batean sartu aurretik ohartarazten du tranpak gaituta badaude",
-  "INTERFACE": "",
-  "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "",
-  "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "",
-  "INTERFACE/HACK_HIDE_MENU_SNOW": "",
-  "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "",
+  "INTERFACE": "Interfazea",
+  "INTERFACE/HACK_HIDE_ENDSCREEN_CHEATS": "Amaiera-Pantailatik Tranpak Ezkutatu",
+  "INTERFACE/HACK_HIDE_ENDSCREEN_EXTRAS": "Amaiera-Pantailatik Gehigarriak Ezkutatu",
+  "INTERFACE/HACK_HIDE_MENU_SNOW": "Menuaren Elurra Ezkutatu",
+  "INTERFACE/HACK_HIDE_PAUSE_ICONIC": "Pausa-Menuan «Iconic» Ezkutatu",
   "SPEEDHACK": "Speedhack",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK": "Gaituta",
   "SPEEDHACK/LAYOUT/HACK_SPEEDHACK/TIP": "Biderkatzaile baten arabera, joku osoa moteltzen edo bizkortzen du",
@@ -585,8 +585,8 @@
   "UTILITY": "Tresneria",
   "UTILITY/CLICKS/P1": "P1 Klik",
   "UTILITY/CLICKS/P2": "P2 Klik",
-  "UTILITY/DEV_TOOLS": "",
-  "UTILITY/DEV_TOOLS/TIP": "",
+  "UTILITY/DEV_TOOLS": "«DevTools» Ireki",
+  "UTILITY/DEV_TOOLS/TIP": "Geode-ko «DevTools» irekitzen du, mod hau instalatuta egon behar da",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Ezkerra",
   "UTILITY/DIRECTIONAL/P1_RIGHT": "Eskuina",
   "UTILITY/DIRECTIONAL/P2_LEFT": "Ezkerra",
@@ -606,7 +606,7 @@
   "SCREENSHOT": "Pantaila-Argazkia",
   "SCREENSHOT/SCREENSHOT": "Pantaila-Argazkia",
   "SCREENSHOT/SCREENSHOT/TIP": "Pantaila-Argazki bat ateratzen du",
-  "SCREENSHOT/COMBO": "",
+  "SCREENSHOT/COMBO": "Modua",
   "SCREENSHOT/COMBO/0": "Gorde eta kopiatu",
   "SCREENSHOT/COMBO/1": "Arbelera kopiatu",
   "SCREENSHOT/COMBO/2": "Fitxategira gorde",
@@ -651,7 +651,7 @@
   "STATUS/*/POSITION/3": "Behe-Eskuina",
   "STATUS/*/MOVE/DOWN": "Behera",
   "STATUS/*/MOVE/UP": "Gora",
-  "STATUS/*/PREFIX": "",
+  "STATUS/*/PREFIX": "Aurrizkia Erakutsi",
   "STATUS/*/UNITS": "Unitateak Erakutsi",
   "STATUS/MESSAGE/ENABLED": "Mezua",
   "STATUS/MESSAGE/DROPDOWN/MESSAGE": "Mezua",
@@ -663,8 +663,8 @@
   "STATUS/CPS/DROPDOWN/MAX": "Gehiengoa Erakutsi",
   "STATUS/CPS/DROPDOWN/TOTAL": "Guztira Erakutsi",
   "STATUS/BEST_RUN/ENABLED": "Run Onena",
-  "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "",
-  "STATUS/BEST_RUN/DROPDOWN/ONLY_CURRENT": "",
+  "STATUS/BEST_RUN/DROPDOWN/ACCURATE_PERCENTAGE": "Portzentai Zehatza",
+  "STATUS/BEST_RUN/DROPDOWN/ONLY_CURRENT": "Oraingo %-tik Aurrera Bakarrik",
   "STATUS/NOCLIP_ACCURACY/ENABLED": "Noclip Zehaztasuna",
   "STATUS/NOCLIP_ACCURACY/DROPDOWN/PREFIX": "Aurrizkia Erakutsi",
   "STATUS/NOCLIP_DEATHS/ENABLED": "Noclip Hiltzeak",
@@ -677,7 +677,7 @@
   "STATUS/FRAME/ENABLED": "Fotograma-Kontadorea",
   "STATUS/POSITION/ENABLED": "Posizioa",
   "STATUS/REPLAY_STATE/ENABLED": "Replay Egoera",
-  "STATUS/SESSION_TIME/ENABLED": "",
+  "STATUS/SESSION_TIME/ENABLED": "Sesio-Denbora",
   "REPLAY": "Replay",
   "REPLAY/FILE": "Errepikapena Hautatu",
   "REPLAY/OPEN": "Errepikapena Ireki",
@@ -691,7 +691,7 @@
   "REPLAY/END_LAYOUT/DELETE": "Ezabatu",
   "REPLAY/GAMEPLAY": "Gameplay-Aukerak",
   "REPLAY/GAMEPLAY/ALLOW_RANDOMNESS": "Auzazkoak Baimendu",
-  "REPLAY/GAMEPLAY/BLOCK_INPUTS": "",
+  "REPLAY/GAMEPLAY/BLOCK_INPUTS": "Sarrerak Blokeatu",
   "REPLAY/CONVERT": "Bihurtu (.json, .gdr)",
   "REPLAY/NONE": "Errepikapenik Hautatu Gabe"
 }
